altered site template name

--- a/_includes/theme-menu.html
+++ b/_includes/theme-menu.html
@@ -1,7 +1,7 @@
 <div id="header">
     <div class="container">
         <div class="logo">
-            <a href="/"><img src="{% if site.header-image %}{{site.header-image}}{% else %}assets/images/logo-1.png{% endif %}" width="200px" alt=""></a>
+            <a href="/"><img src="{% if site.header_image %}{{site.header-imageheader_image}}{% else %}assets/images/logo-1.png{% endif %}" width="200px" alt=""></a>
         </div>
         <div id="nav">
             <a class="menu_res"><span></span><span></span><span></span></a>
