--- a/_includes/theme-menu.html
+++ b/_includes/theme-menu.html
@@ -1,7 +1,13 @@
 <div id="header">
     <div class="container">
         <div class="logo">
-            <a href="/">{% if site.header_image != null %}<img src="{{site.header_image}}" width="200px" alt="imagea">{% else %}<img src="assets/images/logo-1.png" width="200px" alt="imageb">{% endif %}</a>
+            <a href="/">
+            {% if site.header_image != null %}
+              <img src="{{site.header_image}}" width="200px" alt="site logo" />
+            {% else %}
+              <img src="assets/images/logo-1.png" width="200px" alt="site logo" />
+            {% endif %}
+            </a>
         </div>
         <div id="nav">
             <a class="menu_res"><span></span><span></span><span></span></a>
