--- a/_includes/theme-menu.html
+++ b/_includes/theme-menu.html
@@ -1,29 +1,28 @@
-<div id="header">
-    <div class="container">
-        <div class="logo">
-            <a href="/">
-            {% if site.header_image != null %}
-              <img src="{{site.header_image}}" width="200px" alt="site logo" />
-            {% else %}
-              <img src="assets/images/logo-1.png" width="200px" alt="site logo" />
-            {% endif %}
-            </a>
-        </div>
-        <div id="nav">
-            <a class="menu_res"><span></span><span></span><span></span></a>
-            <div class="nav_inner clearfix">
-                <ul>
-                    {% assign pages_list = site.pages | sort:"url" %}
-                    {% for node in pages_list %}
-                    {% if node.title != null %}
+{% for p in site.data.navigation %}
 
-                        {% if node.ignoreMenu != true %}
-                        <li class="{% if page.url == node.url %} active{% endif %}"><a href="{{node.url}}">{{node.title}}</a></li>
-                        {% endif %}
-                    {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+	{% if forloop.first %}
+	<nav class="main-menu top-bar">
+		<ul id="menu-main-menu" class="dropdown menu desktop-menu" data-dropdown-menu role="menubar">
+	{% endif %}
+
+		<li class="menu-item menu-item-has-children {% if p.subnav %}is-dropdown-submenu-parent opens-right{% endif %}">
+			<a {% if p.url == page.url %}class="active"{% endif %} href="{{ p.url | absolute_url }}">{{ p.title }}</a>
+			{% for s in p.subnav %}
+				{% if forloop.first %}
+					<ul class="dropdown menu vertical" data-toggle>
+				{% endif %}
+					<li>
+						<a {% if s.url == page.url %}class="active"{% endif %} href="{{ s.url | absolute_url }}">{{ s.title }}</a>
+					</li>
+				{% if forloop.last %}
+					</ul>
+				{% endif %}
+			{% endfor %}
+		</li>
+
+	{% if forloop.last %}
+		</ul>
+	</nav>
+	{% endif %}
+
+{% endfor %}
