--- a/_layouts/title-page.html
+++ b/_layouts/title-page.html
@@ -1,6 +1,14 @@
 {% include header.html %}
 
-	<main class="inner-container">
+	<main class="inner-container title-page">
+
+		<header class="title">
+			<div class="wrapper">
+				<div class="content">
+					<h1>{{ page.title }}</h1>
+				</div>
+			</div>
+		</header>
 
 		<div class="full-width-content">
 			<div class="wrapper">
