--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,15 +13,11 @@
 							<ul class="social-links">
 								{% include parts/social-media.html %}
 								{% for static_file in site.static_files %}
-									{% if static_file.path == '/privacy.md' or  static_file.path == '/privacy.html' %}
+									<!-- {% if static_file.path == '/privacy.md' or  static_file.path == '/privacy.html' or '/privacy/index.md' or  static_file.path == '/privacy/index.html' %} -->
 										<li class="menu-item">
-											<a href="{{ site.baseurl }}/privacy">Your privacy matters</a>
+											<a href="{{ site.baseurl }}/privacy/">static_file.path</a>
 										</li>
-									{% elsif static_file.path == '/privacy/index.md' or  static_file.path == '/privacy/index.html' %}
-										<li class="menu-item">
-											<a href="{{ site.baseurl }}/privacy/">Your privacy matters</a>
-										</li>
-									{% endif %}
+									<!-- {% endif %} -->
 								{% endfor %}
 							</ul>
 						</div>
