--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 								{% for static_file in site.static_files %}
 									<!-- {% if static_file.path == '/privacy.md' or  static_file.path == '/privacy.html' or '/privacy/index.md' or  static_file.path == '/privacy/index.html' %} -->
 										<li class="menu-item">
-											<a href="{{ site.baseurl }}/privacy/">static_file.path</a>
+											<a href="{{ site.baseurl }}/privacy/">{{static_file.path}}</a>
 										</li>
 									<!-- {% endif %} -->
 								{% endfor %}
