--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,10 +12,10 @@
 						<div class="social-media">
 							<ul class="social-links">
 								{% include parts/social-media.html %}
-								{% for static_file in site.static_files %}
-									<!-- {% if static_file.path == '/privacy.md' or  static_file.path == '/privacy.html' or '/privacy/index.md' or  static_file.path == '/privacy/index.html' %} -->
+								{% for p in site.pages %}
+									<!-- {% if p.url == '/privacy.md' or  p.url == '/privacy.html' or '/privacy/index.md' or  p.url == '/privacy/index.html' %} -->
 										<li class="menu-item">
-											<a href="{{ site.baseurl }}/privacy/">{{static_file.path}}</a>
+											<a href="{{ site.baseurl }}/privacy/">{{p.url}}</a>
 										</li>
 									<!-- {% endif %} -->
 								{% endfor %}
