fix for different privacy urls

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,9 +13,9 @@
 							<ul class="social-links">
 								{% include parts/social-media.html %}
 								{% for p in site.pages %}
-									{% if p.url == '/privacy.html' or p.url == '/privacy/' %}
+									{% if p.url == '/privacy/' or p.url == '/privacy' %}
 										<li class="menu-item">
-											<a href="{{ site.baseurl }}/privacy/">Your privacy matters</a>
+											<a href="{{ p.url | absolute_url }}">Your privacy matters</a>
 										</li>
 									{% endif %}
 								{% endfor %}
