--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div class="main-logo">
-			<a href="{{ site.baseurl }}" rel="home">
+			<a href="{{ site.eurl }}" rel="home">
 				<img src="{{ 'assets/images/' | absolute_url }}{{ site.data.header.image_location }}" alt="{{ site.data.header.image_alt }}">
 			</a>
 		</div>
